--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "gpt-tokenizer-demo",
   "version": "1.0.0",
   "description": "A small demo of gpt-tokenizer.",
-  "keywords": ["tokenizer", "gpt-3", "gpt"],
+  "keywords": [
+    "tokenizer",
+    "gpt-3",
+    "gpt"
+  ],
   "main": "src/index.tsx",
   "dependencies": {
-    "gpt-tokenizer": "2.0.0",
+    "gpt-tokenizer": "^2.0.0",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,5 +26,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
