--- a/.reflame.config.jsonc
+++ b/.reflame.config.jsonc
@@ -2,38 +2,45 @@
   // This is a JSON with Comments file.
   // It's basically JSON, with the addition of comments, and looser syntax 
   // (trailing commas!).
-  
   // Reflame uses this to identify your app.
   "appId": "01H26KVDHPBTKSP99ZYZGPPJ6X",
-    
   // This is what shows up in the browser's tab bar.
   "title": "Reflame App",
   // This is the description that shows up in Google search.
   "description": "A new Reflame app.",
-
   // Reflame will watch this directory for your React source code and deploy changes
   // instantly. 
   //
   // This normally defaults to 'app', but we set this to 'src' for Vite compatibility.
   "sourceDirectory": "src",
-    
+  "scripts": [
+    "/main.tsx"
+  ],
   // Reflame will use this to keep your app up to date as we make improvements. 
   "foundation": {
     "name": "vite-react",
     "version": 2,
   },
-  
   // Enables nodejs compatibility mode for extensionless imports for JS/TS modules
   "nodejsCompatibility": {
     "omitModuleExtension": true,
+    "packageJson": true,
   },
-
   // NPM packages listed here will be installed by Reflame every time you update this file.
   // 
   // It's important to only include packages that will be used by your app in browsers here.
   // Including dev-time dependencies that run in node can result in deploy failures and poor
   // performance.
   "npmPackages": {
+    "gpt-tokenizer": {
+      "entryPoints": [
+        "/encoding/cl100k_base",
+        "/encoding/p50k_base",
+        "/encoding/r50k_base",
+        "/encoding/p50k_edit",
+        "/mapping",
+      ]
+    }
     // // Specify npm packages in the same format as you would with package.json
     // "framer-motion": "^6.2.8",
   },
